remove link 9th

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,4 @@
-<figure class="image">
+<!-- <figure class="image__custom">
     <div class="projects__img__block">
         {%- if include.custom__conf -%}
         <div class={{include.custom__conf}}>
@@ -40,4 +40,4 @@
             {%- endif -%}
         </div>
     </div>
-</figure>
+</figure> -->
