--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,24 +1,26 @@
-<!-- <figure class="image__custom">
+<figure class="image">
     <div class="projects__img__block">
         {%- if include.custom__conf -%}
         <div class={{include.custom__conf}}>
         {%- else -%}
         <div class="projects__img">
         {%- endif -%}
-        {%- if include.description -%}
-            <a href="{{ site.baseurl }}{% link {{ include.link }} %}">    
+        {%- if include.link -%}            
+            {%- if include.description -%}
+                <a href="{% link {{ include.link }} %}">    
+                    <img src="{{ include.url }}" 
+                        alt="{{ include.title }}
+                            {{ include.description }}
+                            {{ include.date }}
+                            {{ inlcude.link }}">
+                </a>
+            {%- else -%}
                 <img src="{{ include.url }}" 
                     alt="{{ include.title }}
                         {{ include.description }}
                         {{ include.date }}
                         {{ inlcude.link }}">
-            </a>
-        {%- else -%}
-            <img src="{{ include.url }}" 
-                alt="{{ include.title }}
-                    {{ include.description }}
-                    {{ include.date }}
-                    {{ inlcude.link }}">
+            {%- endif -%} 
         {%- endif -%} 
         </div>
         <div class="projects__img__caption">
@@ -40,4 +42,4 @@
             {%- endif -%}
         </div>
     </div>
-</figure> -->
+</figure>
